# bcvk_win

./: Cargo.toml  README.md
crates/integration-tests/src/: main.rs
crates/kit/: Cargo.toml
crates/kit/scripts/: user-data
crates/kit/src/: cache_metadata.rs  command_run.rs  common_opts.rs  images.rs  install_options.rs  instancetypes.rs  main.rs  run_ephemeral.rs  to_disk.rs  utils.rs
crates/kit/src/hyperv/: mod.rs  run.rs
crates/kit/src/libvirt/: run.rs
crates/kit/src/run_ephemeral/: common.rs  linux.rs  mod.rs
crates/kit/src/to_disk/: common.rs  fallback.rs  linux.rs  mod.rs  windows.rs
crates/kit/src/utils/: common.rs  fallback.rs  linux.rs  mod.rs
